# domain_adpating_whisper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DA_.py  DA_dyslexia.py  Dockerfile  HUGGINGFACE_INTEGRATION.md  LICENSE  QUICK_START.md  README.md  REPOSITORY_SETUP_COMPLETE.md  TEST_README.md  pyproject.toml  requirements.txt  setup.py  setup_environment.sh  test_dyslexia_dataset.py  test_examples.py  test_whisper_model.py  whisper_domain_adaptation.py  whisper_domain_adaptation_eval_combined.py  whisper_dyslexia_cross_domain.py  whisper_v3.py
.github/workflows/: ci.yml
docs/: testing_guide.md  training_guide.md
examples/: sample_test_data.json  sample_testing.py  sample_training.py
